
[v1.1.2p1f]
 - API[Common]: It is no longer possible to stack CDockables with differnt working-areas. This keeps actions like "normalize" more consistent.
 - Bugfix[Common]: Maximization mode is more intelligent: when unmaximzing Dockables *all* instead the top level elements are scanned for known old locations, and if maximizing the stored old location is not deleted unless the new maximized Dockable is known to have a location.
 - API[Common]: The action "ensureBasicModes" now also uses group-movement, so calling this method behaves very much like clicking all the "normalize" buttons of all Dockables 
 - API[Common]: After hiding a CDockable the extended-mode of all Dockables that were not in a baisc mode is restored in the order of the focus history.

[v1.1.2p1g]
 - Bugfix[Toolbar]: Code for reading the layout of a toolbar and creating a ToolbarContainerDockPerspective was using an outdated format. 

[v1.1.2p1h]
 - Bugfix: Arch could throw an exception if too small
 - API: CGridPerspective offers a new method "unpack", making sure there is no stack of dockables in the grid.
     
[v1.1.2p2]
 - API: ToolbarItemDockable now features a BackgroundComponent and thus supports things like true transparency
 - API: DockStation and Combiner now offer methods to add a placeholder "aside" some given location
 - API: CDockable now offers methods to automatically set the location close to the focused Dockable (CDockable.setLocationsAside...)
 - API: Moving a maximized CDockable (moving means the parent does not change) does no longer normalize the Dockable 
 - Bugfix: SplitDockStation.removePlaceholder did not work properly, the placeholders were not removed from leafs or nodes
 - API: Added methods to CMenu and CDropDownButton for getting the CActions that were added to the menu
 ! API: EclipseDockableDisplayer removed, and EclipseDockableDisplayer2 renamed to EclipseDockableDisplayer
 ! API: Removed NoTitleDisplayer 