@@ -476,18 +476,7 @@ public interface CDockable {
      * @return the size
      */
     public Dimension getMinimizedSize();
-    
-    /**
-     * Sets whether this <code>CDockable</code> should remain visible when minimized
-     * and without focus.
-     * @param hold whether to remain visible
-     * @deprecated use {@link #setSticky(boolean)} instead
-     */
-    @Deprecated
-    @Todo( compatibility=Compatibility.BREAK_MINOR, priority=Priority.ENHANCEMENT, target=Version.VERSION_1_1_2,
-    		description="remove this method")
-    public void setMinimizedHold( boolean hold );
-    
+        
     /**
      * Sets whether this <code>CDockable</code> should remain visible when minimized
      * and without focus.
@@ -499,33 +488,10 @@ public interface CDockable {
      * Tells whether this <code>CDockable</code> remains visible when minimized and 
      * without focus.
      * @return <code>true</code> if this remains visible, <code>false</code>
-     * otherwise
-     * @deprecated use {@link #isSticky()} instead 
-     */
-    @Deprecated
-    @Todo( compatibility=Compatibility.BREAK_MINOR, priority=Priority.ENHANCEMENT, target=Version.VERSION_1_1_2,
-    		description="remove this method")
-    public boolean isMinimizedHold();
-    
-    /**
-     * Tells whether this <code>CDockable</code> remains visible when minimized and 
-     * without focus.
-     * @return <code>true</code> if this remains visible, <code>false</code>
      * otherwise 
      */    
     public boolean isSticky();
     
-    /**
-     * Sets whether the user can switch the {@link #isMinimizedHold()} property by clicking
-     * on a button that is presented by the {@link FlapDockStation}.
-     * @param switchable whether the user is able to switch the hold property
-     * @deprecated use {@link #setStickySwitchable(boolean)} instead
-     */
-    @Deprecated
-    @Todo( compatibility=Compatibility.BREAK_MINOR, priority=Priority.ENHANCEMENT, target=Version.VERSION_1_1_2,
-    		description="remove this method")
-    public void setMinimizedHoldSwitchable( boolean switchable );
-
     /**
      * Sets whether the user can switch the {@link #isSticky()} property by clicking
      * on a button that is presented by the {@link FlapDockStation}.
@@ -533,18 +499,6 @@ public interface CDockable {
      */
     public void setStickySwitchable( boolean switchable );
     
-    /**
-     * Tells whether the {@link #isMinimizedHold()} property can be changed by the user
-     * by clicking a button that is displayed on the {@link FlapDockStation}.
-     * @return <code>true</code> if the user is able to switch the property, <code>false</code>
-     * otherwise
-     * @deprecated use {@link #isStickySwitchable()} instead
-     */
-    @Deprecated
-    @Todo( compatibility=Compatibility.BREAK_MINOR, priority=Priority.ENHANCEMENT, target=Version.VERSION_1_1_2,
-    		description="remove this method")
-    public boolean isMinimizedHoldSwitchable();
-
     /**
      * Tells whether the {@link #isSticky()} property can be changed by the user
      * by clicking a button that is displayed on the {@link FlapDockStation}.
